@@ -308,7 +308,7 @@ sp_item_set(SPObject *object, unsigned key, gchar const *value)
         case SP_ATTR_SODIPODI_INSENSITIVE:
             item->sensitive = !value;
             for (SPItemView *v = item->display; v != NULL; v = v->next) {
-                nr_arena_item_set_sensitive(v->arenaitem, item->sensitive);
+                nr_arena_item_set_sensitive(v->arenaitem, item->sensitive && item->style->visibility);
             }
             break;
         case SP_ATTR_SODIPODI_NONPRINTABLE:
@@ -427,6 +427,7 @@ sp_item_update(SPObject *object, SPCtx *ctx, guint flags)
         if (flags & SP_OBJECT_STYLE_MODIFIED_FLAG) {
             for (SPItemView *v = item->display; v != NULL; v = v->next) {
                 nr_arena_item_set_opacity(v->arenaitem, SP_SCALE24_TO_FLOAT(object->style->opacity.value));
+                nr_arena_item_set_visible(v->arenaitem, object->style->visibility);
             }
         }
     }
@@ -622,7 +623,8 @@ sp_item_invoke_show(SPItem *item, NRArena *arena, unsigned key, unsigned flags)
         item->display = sp_item_view_new_prepend(item->display, item, flags, key, ai);
         nr_arena_item_set_transform(ai, item->transform);
         nr_arena_item_set_opacity(ai, SP_SCALE24_TO_FLOAT(SP_OBJECT_STYLE(item)->opacity.value));
-        nr_arena_item_set_sensitive(ai, item->sensitive);
+        nr_arena_item_set_visible(ai, SP_OBJECT_STYLE(item)->visibility);
+        nr_arena_item_set_sensitive(ai, item->sensitive && SP_OBJECT_STYLE(item)->visibility);
         if (flags & SP_ITEM_SHOW_PRINT) {
             nr_arena_item_set_visible(ai, item->printable);
         }
